Add Client and GUI components for question creation and management